<resources>
    <string name="app_name">Lab16</string>
    <string name="storyPicture">Story picture</string>

    <string name="runAway">Убежать</string>
    <string name="stay">Остаться</string>
    <string name="obey">Послушаться</string>
    <string name="tryAgain">Попробовать ещё раз...</string>
    <string name="playAgain">Ещё разок сначала!</string>

    <string name="introText">Жили-были старик со старухой. Однажды старик попросил старуху испечь ему
        колобок. Старуха по коробу поскребла, по сусеку помела, замесила тесто, испекла
        колобок и положила она его на окошко остывать.
    </string>

    <string name="hareText">Надоело колобку лежать, он спрыгнул с окошка и покатился в лес. Встретил его
        в лесу заяц и сказал: «Колобок, колобок, я тебя съем!». Но колобок ответил «Не ешь
        меня, я тебе песенку спою», и спел песенку о том, как его испекла старуха и как он
        убежал от бабушки и дедушки.
    </string>

    <string name="wolfText">Катится колобок дальше, а навстречу ему волк. Волк и говорит: «Колобок,
        колобок, я тебя съем!». Но колобок ответил «Не ешь меня, я тебе песенку спою», и
        спел песенку о том, как его испекла старуха и как он убежал от бабушки и дедушки, и
        от зайца тоже.
    </string>

    <string name="bearText">Катится колобок дальше, а навстречу ему медведь. Медведь и говорит:
        «Колобок, колобок, я тебя съем!». Но колобок ответил «Не ешь меня, я тебе песенку
        спою», и спел песенку о том, как его испекла старуха и как он убежал от бабушки и
        дедушки, и от зайца с волком тоже.
    </string>

    <string name="foxText">Катится колобок дальше, а навстречу ему лиса. Лиса и говорит: «Колобок,
        колобок, я тебя съем!». Но колобок ответил «Не ешь меня, я тебе песенку спою», и
        спел песенку о том, как его испекла старуха и как он убежал от бабушки и дедушки, и
        от зайца, волка и медведя тоже. А лиса говорит: «Хороша песенка, но глуховата я,
        сядь мне на язычок, и спой ещё разок!»
    </string>

    <string name="badEndingText">Тут-то глупого колобка и скушали... И это грустный, но полезный урок.</string>

    <string name="goodEndingText">Но раскусил колобок хитрость лисы, и сбежал от неё. Стал путешествовать по
        свету и жить долго и счастливо!
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>